css/css-images/radial-gradient-transition-hint-crash.html WPT asserts on debug builds https://bugs.webkit.org/show_bug.cgi?id=277218

Reviewed by Sam Weinig.

`StyleGradientImage::computeStops()`: Don't re-compute midpoint offsets.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/style/StyleGradientImage.cpp:
(WebCore::StyleGradientImage::computeStops const):

Canonical link: https://commits.webkit.org/284231@main